--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -76,6 +76,53 @@ publisher = {Cambridge University Press},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{fujii:2006,
+   author = {{Fujii}, M. and {Funato}, Y. and {Makino}, J.},
+    title = "{Dynamical Friction on Satellite Galaxies}",
+  journal = {PASJ},
+   eprint = {astro-ph/0511651},
+ keywords = {galaxies: evolution, galaxies: interactions, galaxies: kinematics and dynamics, methods: numerical, stellar dynamics},
+     year = 2006,
+    month = aug,
+   volume = 58,
+    pages = {743-752},
+      doi = {10.1093/pasj/58.4.743},
+   adsurl = {http://adsabs.harvard.edu/abs/2006PASJ...58..743F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{weinberg:1989,
+   author = {{Weinberg}, M.~D.},
+    title = "{Self-gravitating response of a spherical galaxy to sinking satellites}",
+  journal = {MNRAS},
+ keywords = {Celestial Mechanics, Disk Galaxies, Dwarf Galaxies, Orbit Decay, Stellar Motions, Interacting Galaxies, Luminosity, Orbital Mechanics, Perturbation},
+     year = 1989,
+    month = aug,
+   volume = 239,
+    pages = {549-569},
+      doi = {10.1093/mnras/239.2.549},
+   adsurl = {http://adsabs.harvard.edu/abs/1989MNRAS.239..549W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{quinlan:1996,
+       author = {{Quinlan}, Gerald D.},
+        title = "{The dynamical evolution of massive black hole binaries I. Hardening in a fixed stellar background}",
+      journal = {New Astronomy},
+     keywords = {Astrophysics},
+         year = "1996",
+        month = "Jul",
+       volume = {1},
+        pages = {35-56},
+          doi = {10.1016/S1384-1076(96)00003-6},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/9601092},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/1996NewA....1...35Q},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{chandrasekhar:1943,
    author = {{Chandrasekhar}, S.},
     title = "{Dynamical Friction. I. General Considerations: the Coefficient of Dynamical Friction.}",
