--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -76,6 +76,85 @@ publisher = {Cambridge University Press},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{khan:2013,
+   author = {{Khan}, F.~M. and {Holley-Bockelmann}, K. and {Berczik}, P. and 
+	{Just}, A.},
+    title = "{Supermassive Black Hole Binary Evolution in Axisymmetric Galaxies: The Final Parsec Problem is Not a Problem}",
+  journal = {ApJ},
+archivePrefix = "arXiv",
+   eprint = {1302.1871},
+ keywords = {black hole physics, Galaxy: center, galaxies: kinematics and dynamics },
+     year = 2013,
+    month = aug,
+   volume = 773,
+      doi = {10.1088/0004-637X/773/2/100},
+   adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...773..100K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{berczik:2006,
+   author = {{Berczik}, P. and {Merritt}, D. and {Spurzem}, R. and {Bischof}, H.-P.},
+    title = "{Efficient Merger of Binary Supermassive Black Holes in Nonaxisymmetric Galaxies}",
+  journal = {ApJ},
+   eprint = {astro-ph/0601698},
+ keywords = {Black Hole Physics, Galaxies: Evolution, Galaxies: Interactions},
+     year = 2006,
+    month = may,
+   volume = 642,
+      doi = {10.1086/504426},
+   adsurl = {http://adsabs.harvard.edu/abs/2006ApJ...642L..21B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{mayer:2007,
+       author = {{Mayer}, L. and {Kazantzidis}, S. and {Madau}, P. and {Colpi}, M. and
+         {Quinn}, T. and {Wadsley}, J.},
+        title = "{Rapid Formation of Supermassive Black Hole Binaries in Galaxy Mergers with Gas}",
+      journal = {Science},
+     keywords = {ASTRONOMY, Astrophysics},
+         year = "2007",
+        month = "Jun",
+       volume = {316},
+          doi = {10.1126/science.1141858},
+archivePrefix = {arXiv},
+       eprint = {0706.1562},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/2007Sci...316.1874M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{begelman:1980,
+   author = {{Begelman}, M.~C. and {Blandford}, R.~D. and {Rees}, M.~J.},
+    title = "{Massive black hole binaries in active galactic nuclei}",
+  journal = {Nature},
+ keywords = {Active Galactic Nuclei, Binary Stars, Black Holes (Astronomy), Stellar Evolution, Supermassive Stars, Astrophysics, Orbital Elements},
+     year = 1980,
+    month = sep,
+   volume = 287,
+    pages = {307-309},
+      doi = {10.1038/287307a0},
+   adsurl = {http://adsabs.harvard.edu/abs/1980Natur.287..307B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{milosavljevic:2003,
+       author = {{Milosavljevi{\'c}}, M. and {Merritt}, D.},
+        title = "{The Final Parsec Problem}",
+     keywords = {04.30.Db, 97.60.Lf, 97.80.Gm, 95.10.Ce, Wave generation and sources, Black holes, Cataclysmic binaries, symbiotic stars, Celestial mechanics, Astrophysics},
+    booktitle = {The Astrophysics of Gravitational Wave Sources},
+         year = "2003",
+       series = {American Institute of Physics Conference Series},
+       volume = {686},
+        month = "Oct",
+        pages = {201-210},
+          doi = {10.1063/1.1629432},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0212270},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/2003AIPC..686..201M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{fujii:2006,
    author = {{Fujii}, M. and {Funato}, Y. and {Makino}, J.},
     title = "{Dynamical Friction on Satellite Galaxies}",
