--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -76,9 +76,40 @@ publisher = {Cambridge University Press},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{rantala:2018,
+       author = {{Rantala}, A. and {Johansson}, P.~H. and {Naab}, T. and {Thomas}, J. and {Frigo}, M.},
+        title = "{The Formation of Extremely Diffuse Galaxy Cores by Merging Supermassive Black Holes}",
+      journal = {ApJ},
+     keywords = {galaxies: individual: NGC 1600, galaxies: kinematics and dynamics, methods: numerical, Astrophysics - Astrophysics of Galaxies},
+         year = "2018",
+        month = "Sep",
+       volume = {864},
+          doi = {10.3847/1538-4357/aada47},
+archivePrefix = {arXiv},
+       eprint = {1805.10295},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/2018ApJ...864..113R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{roedig:2014,
+       author = {{Roedig}, C. and {Krolik}, J.~H. and {Miller}, M.~C.},
+        title = "{Observational Signatures of Binary Supermassive Black Holes}",
+      journal = {ApJ},
+     keywords = {accretion, accretion disks, black hole physics, gravitational waves, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = "2014",
+        month = "Apr",
+       volume = {785},
+          doi = {10.1088/0004-637X/785/2/115},
+archivePrefix = {arXiv},
+       eprint = {1402.7098},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/2014ApJ...785..115R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{khan:2013,
-   author = {{Khan}, F.~M. and {Holley-Bockelmann}, K. and {Berczik}, P. and 
-	{Just}, A.},
+   author = {{Khan}, F.~M. and {Holley-Bockelmann}, K. and {Berczik}, P. and {Just}, A.},
     title = "{Supermassive Black Hole Binary Evolution in Axisymmetric Galaxies: The Final Parsec Problem is Not a Problem}",
   journal = {ApJ},
 archivePrefix = "arXiv",
@@ -107,8 +138,7 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{mayer:2007,
-       author = {{Mayer}, L. and {Kazantzidis}, S. and {Madau}, P. and {Colpi}, M. and
-         {Quinn}, T. and {Wadsley}, J.},
+       author = {{Mayer}, L. and {Kazantzidis}, S. and {Madau}, P. and {Colpi}, M. and {Quinn}, T. and {Wadsley}, J.},
         title = "{Rapid Formation of Supermassive Black Hole Binaries in Galaxy Mergers with Gas}",
       journal = {Science},
      keywords = {ASTRONOMY, Astrophysics},
