--- a/tex/gradu.tex
+++ b/tex/gradu.tex
@@ -743,7 +743,7 @@ There are some systems that cannot be properly described by a post-Newtonian app
 
 Galaxy formation is believed to be a hierarchical or ``bottom-up'' process, where smaller systems interact and merge multiple times, forming ever larger systems \citep{bt-galdyn}. This hierarchical model will also logically result in the central supermassive black holes that most galaxies host interacting with other black holes during the merger events. The black holes will first form binaries and then eventually merge with each other.
 
-There are three main phases that the black holes go through before their eventual merging. At first, when the galaxies start merging, the black holes start to sink into the center of the combined galaxy system due to dynamical friction. They will eventually form a gravitationally bound binary system with a semimajor axis of around 10 parsecs. Next the semimajor axis of the binary will shrink, also known as hardening, due to stars interacting with the binary. In this process stars are ejected, carrying away angular momentum and energy from the system. Finally, once the binary is only hundredths of parsecs wide, it will start to noticeably lose energy due to the emission of gravitational waves, until their eventual coalescence. These different regimes will be discussed in the next sections.
+There are three main phases that the black holes go through before their eventual merging. At first, when the galaxies start merging, the black holes start to sink into the center of the combined galaxy system due to dynamical friction. They will eventually form a gravitationally bound binary system. The semimajor axis of the bound system depends on the masses of the black holes. For black holes with masses of $\sim 10^9 \, M_\odot$, the semimajor axis will be $\sim 100$ pc \citep{rantala:2018}. Next the semimajor axis of the binary will shrink, also known as hardening, due to stars interacting with the binary. In this process stars are ejected, carrying away angular momentum and energy from the system. Finally, once the binary is close enough together, it will start to noticeably lose energy due to the emission of gravitational waves, until their eventual coalescence. This will start happening at a semimajor axis of $\sim 0.1$ pc for the aforementioned masses \citep{rantala:2018}. These different regimes will be discussed in the next sections.
 
 \subsection{Dynamical friction}
 
@@ -778,7 +778,7 @@ where $v_{\mathrm{typ}}$ is the typical encounter speed between the particles. S
 \end{equation}
 This logarithm basically describes the cut-off of the friction effect at the maximum impact parameter \citep{galform}.
 
-If the subject mass moves slowly, so that we can assume that $v_M$ is small, the field star distribution function can be approximately replaced with $f(0)$. In this case the integral is easy to evaluate, and we get the following form for equation \ref{equ:dynamicalfriction}: 
+If the subject mass moves slowly, so that we can assume that $v_M$ is small, the field star distribution function can be approximately replaced with $f(0)$. In this case the integral is easy to evaluate, as we can take the function out of the integral and we are left with $\int_0^{v_M} v_m^2 \mathrm{d} v_m = v_M^3/3$. From this we get the following form for equation \ref{equ:dynamicalfriction}: 
 \begin{equation}
 \mathbf{F}_{\mathrm{df}} = -\frac{16 \pi^2}{3} G^2 M^2 m_a \, \mathrm{ln} \Lambda \, f(0) \mathbf{v}_M \ . \label{equ:dynfricslow}
 \end{equation}
@@ -793,7 +793,7 @@ From equations \ref{equ:dynfricslow} and \ref{equ:dynfricfast} we can see that u
 Chandrasekhar's formula makes several unrealistic assumptions when applied to a real astrophysical system. It assumes that all of the particles are point masses, it does not take into account the self-gravity of the wake left by the subject body, and it assumes a homogeneous and infinite distribution of the field particles, meaning that the choice of $b_\mathrm{max}$ and $v_\mathrm{typ}$ are a bit arbitrary in real scenarios. Despite these assumptions, Chandrasekhar's formula gives good approximations for the drag effect on a subject mass travelling in a stellar system. Taking these effects into account leads to an orbital decay time that is roughly twice as long compared to the estimate from Chandrasekhar's formula \citep{weinberg:1989}.
 
 The point mass approximation can be corrected by using the half-mass radius in place of $b_{90}$ in equation \ref{equ:coulomblog} \citep{bt-galdyn}. Half-mass radius is simply the radius of the subject body that contains half of its total mass.
-The fact that the exact values for the parameters in the Coulomb logarithm are hard to determine does not cause as much error as one might imagine. The ratio between $b_\mathrm{max}$ and $b_{90}$ is typically quite large, so the logarithm is not very sensitive to changes of order unity in the parameters. Finally, if we want take self-gravitation of the system into account as well, we need to use a more rigorous method such as linear response theory. Instead of considering only independent two-body interactions, the subject body is considered a moving external potential which causes a response density in the host system. In turn, the gravitational effect of this response density causes a drag effect on the original potential. This drag force is dynamical friction \citep{galform}. 
+The fact that the exact values for the parameters in the Coulomb logarithm are hard to determine does not cause as much error as one might imagine. The ratio between $b_\mathrm{max}$ and $b_{90}$ is typically quite large. However we take the logarithm, so the end result is much smaller and not very sensitive to changes of order unity in the parameters. Finally, if we want take self-gravitation of the system into account as well, we need to use a more rigorous method such as linear response theory. Instead of considering only independent two-body interactions, the subject body is considered to be a moving external potential which causes a response density in the host system. In turn, the gravitational effect of this response density causes a drag effect on the original potential. This drag force is dynamical friction \citep{galform}. 
 
 %TODO
 
@@ -802,28 +802,34 @@ The fact that the exact values for the parameters in the Coulomb logarithm are h
 
 \subsection{Three-body scattering}
 
-As the black holes sink close to the center of the new combined galaxy system, they will eventually reach a point where they form a gravitationally bound binary. This happens approximately when their semimajor axis is around 10 parsecs, and their orbital velocities exceed the local stellar velocity dispersion. At this point the dynamical friction formula is no longer valid, and instead the evolution of the binary is determined by its interactions with the surrounding stellar population. The binary hardens, i.e. its separation shrinks, by giving kinetic energy to stars that pass close to it through complex three-body interactions, similar to the gravitational slingshot mechanisms used to accelerate spacecraft in our solar system. This hardening happens at a nearly constant rate of
+As the black holes sink close to the center of the newly merged galaxy system, they will eventually reach a point where they form a gravitationally bound binary. The distance where this happens is dependent on the masses of the black holes, but for black holes of masses $\sim 10^9 \, M_\odot$, the semimajor axis of the system is $\sim 100$ \citep{rantala:2018}, and the black hole orbital velocities exceed the local stellar velocity dispersion. At this point the dynamical friction formula is no longer valid, and instead the evolution of the binary is mainly determined by its interactions with the surrounding stellar population. The binary hardens, i.e. its separation shrinks, by losing kinetic energy to stars that pass close to it through complex three-body interactions, similar to the gravitational slingshot mechanisms used to accelerate spacecraft in our solar system. This hardening happens at a nearly constant rate of
 \begin{equation}
 \frac{\mathrm{d}}{\mathrm{d} t} \left( \frac{1}{a} \right) \propto \frac{G \rho}{\sigma}  \ ,
 \end{equation}
-if we assume a constant stellar density $\rho$ and velocity dispersion $\sigma$ \citep{quinlan:1996}. These stars can be ejected from the system at very high velocities, spreading the central stars to wider orbits, and even enough for some of them to escape the potential of the galaxy.
+if we assume a constant stellar density $\rho$ and velocity dispersion $\sigma$ \citep{quinlan:1996}. Here $a$ is the semimajor axis of the bound system. These stars can be ejected from the system at high velocities, spreading the central stars to wider orbits. The velocity of the ejected bodies is typically comparable to the circular orbital velocity of the binary
+\begin{equation}
+v_\star \sim V_{\mathrm{bin}} = \sqrt{\frac{2 G M_\bullet}{a}} \ ,
+\end{equation}
+where $a$ is the semimajor axis of the binary and $M_\bullet$ is the mass of the binary. The range of ejection velocities is broad, and some stars can even be ejected at high enough velocities to escape the potential of the galaxy, over $1000$ $\mathrm{km/s}$ for a $\sim 10^9 M_\odot$ binary \citep{rantala:2018}.
 
 This analysis fails however if the stellar population surrounding the binary is not actually constant. For a star to be able to get close enough to interact strongly with the binary, it has to have angular momentum of $L \lesssim \sqrt{G(M_1 + M_2)a}$, where $M_1$ and $M_2$ are the masses of the black holes, and $a$ is the semimajor axis \citep{bt-galdyn}. The region of stars with low enough angular momentum is called the loss cone. As the stars that interact with the binary are ejected out of the system, the loss cone is slowly drained of stars. If the loss cone is completely emptied, the binary cannot harden any more, and thus its evolution is halted. This is the so called final-parsec problem, and there must be some mechanisms to refill the loss cone if black hole mergers do happen.
 
-One clear candidate for this is two-body relaxations between stars which cause them to end up inside the loss cone \citep{milosavljevic:2003}, but in non-spherical galaxies torques could drive gas to the central region of the galaxy, which would also help the hardening process \citep{mayer:2007}.
-The final parsec problem is more problematic in spherical galaxies where the mass inside the loss cone is the smallest, and there are no torques to drive gas inwards. In triaxial and axisymmetric galaxies however the asymmetric perturbations are able to cause stars to end up on centrophilic orbits that would refill the loss cone. If the host of the binary were to undergo another merger while the black holes are in the process of merging, the perturbations caused by this could break the  symmetry of galactic potentials, and efficiently refill the loss cone.
+One clear candidate for this is two-body relaxations between stars which cause them to end up inside the loss cone \citep{milosavljevic:2003}. In non-spherical galaxies torques could drive gas to the central region of the galaxy, which would also help the hardening process \citep{mayer:2007}.
+Thus the final parsec problem is more problematic in spherical galaxies where the mass inside the loss cone is the smallest, and there are no torques to drive gas inwards. In triaxial and axisymmetric galaxies however the asymmetric perturbations are able to cause stars to end up on centrophilic orbits that would refill the loss cone. If the host of the binary were to undergo another merger while the black holes are in the process of merging, the perturbations caused by this could break the  symmetry of galactic potentials, and efficiently refill the loss cone.
 
 N-body simulations of non-spherical systems suggest that the final parsec problem is not as severe as one might think. The problems has been found to not hamper the hardening of binaries in triaxial \citep{berczik:2006} and axisymmetric galaxies \citep{khan:2013}.
-The simulations however are not necessarily completely accurate. Approximating a galaxy with $N \gtrsim 10^9$ stars by a model consisting of only around $N \lesssim 10^6$ particles leads to enhanced two-body relaxation timescales. Thus the loss cone is much less depleted than in real galaxies \citep{milosavljevic:2003}. This problem could be solved with simulations capable of handling a much larger amount of particles, $N \sim 10^7$, to reproduce the correct behaviour.
+The simulations however are not completely accurate. Approximating a galaxy with $N \gtrsim 10^9$ stars by a model consisting of only around $N \lesssim 10^6$ particles leads to enhanced two-body relaxation timescales. Thus the loss cone is much less depleted than in real galaxies \citep{milosavljevic:2003}. This problem could be alleviated with simulations capable of handling a much larger amount of particles. Simulations with $N \sim 10^7 - 10^8$ particles could reproduce a more realistic, diffusive behaviour of a galaxy.
 
 \subsection{Gravitational waves}
 
-If the black hole binary overcomes the final-parsec problem and reaches a semimajor axis of around a hundredth of a parsec, it will lose enough energy through the emissions gravitational waves to eventually coalesce in less than the Hubble time \citep{milosavljevic:2003}. Hubble time is the time it would take for the universe to expand to its current state if it expanded at a constant Hubble rate. The rate at which the semimajor axis shrinks due to the radiation reaction effect can be estimated with the Peters and Mathews equation \ref{equ:GWsemimajor}. The evolution of the semimajor axis $\dot{a} \propto -a^{-3}$, and if we assume a constant eccentricity we can approximate the coalescence timescale with \citep{bt-galdyn}
+If the black hole binary overcomes the final-parsec problem and reaches a sufficiently small distance, it will lose enough energy through the emission of gravitational waves to eventually coalesce in less than the Hubble time \citep{milosavljevic:2003}. This separation is $\sim 0.1$ pc for a binary with a mass of $\sim 10^9 \, M_\odot$ \citep{rantala:2018}. Hubble time is the time it would take for the universe to expand to its current state if it expanded at a constant Hubble rate. The rate at which the semimajor axis shrinks due to the radiation reaction effect can be estimated with the Peters and Mathews equation \ref{equ:GWsemimajor}. The evolution of the semimajor axis $\dot{a} \propto -a^{-3}$, and if we assume a constant eccentricity we can approximate the coalescence timescale with \citep{bt-galdyn}
 \begin{equation}
 t_c \sim -\frac{a}{4\dot{a}} \ .
 \end{equation}
 
 The longest evolutionary phase for a black hole binary is when the radius of the bound system is below that at which it becomes hard, but still above the radius at which gravitational waves become prominent \citep{begelman:1980}. This is known as the bottleneck radius, and it marks the area where binary black holes are most likely observed. The decay time at this bottleneck radius is uncertain, and depends on both the population of the loss cone and how much gas affects the evolution of the binary \citep{bt-galdyn}. If the coalescence time is very long, over 10 Gyr, we would expect to be able to observe these binaries at the centers of most galaxies. If the timescale is shorter, we could observe the coalescence events happening.
+
+Current observational evidence suggests that long-lived supermassive black hole binaries might be quite rare. No concrete observations of a supermassive black hole binary have been made. This does not mean that they do not exist however. If both of the supermassive black holes of a binary are quasars and they are very close to each other, it is difficult to tell them apart from a singular active galactic nuclei \citep{roedig:2014}. In the future observations made by the LIGO and LISA gravitational wave detectors might give concrete proof of the merging and thus existence of supermassive black hole binaries.
 
 \chapter{AR-CHAIN} \label{chap:ar-chain}
 \section{AR-CHAIN overview}
