--- a/tex/gradu.tex
+++ b/tex/gradu.tex
@@ -45,7 +45,7 @@
 % Set up all the information for the title page and the abstract form.
 % Replace parameters with your information.
 \title{Simulating the dynamics of supermassive black holes}
-\author{Vili Oja}
+\author{Vili Oskari Oja}
 \date{\today}
 \level{Master's thesis}
 \faculty{Faculty of Science}
@@ -53,7 +53,7 @@
 \address{PL 64 (Gustaf Hällströmin katu 2)\\00014 Helsingin yliopisto\\Finland}
 \subject{Astronomy}
 \prof{Professor Peter Johansson}
-\censors{Professor Peter Johansson}{}{}
+\censors{Professor Peter Johansson}{Dr. Pauli Pihajoki}{}
 \depositeplace{}
 \additionalinformation{}
 \numberofpagesinformation{\numberofpages \ pages}
